# heron

./: .gitignore  Cargo.toml  Dockerfile  README.md  ROADMAP.md  build.rs  db_backup.db  deployToProd.sh  doc_schema.json  package-lock.json  package.json  restart.sh  routes.audit.json  routes.audit.txt  webroot
api-spec/: api-routes.js  route-scan.json
docs/: alpine_routes.md  domain_and_service.md
migrations/2025-05-01-204605_create_db/: down.sql  up.sql
migrations/2025-05-20-201148_add_registration_fk_and_unique_ticket/: Query.sql  down.sql  up.sql
migrations/2025-05-29-204446_mailing_list_subscribers/: down.sql  up.sql
migrations/2025-07-31-001817_create_sms_replies/: down.sql  up.sql
migrations/2025-11-05-190602_weekly_answers/: down.sql  up.sql
migrations/2025-11-11-200522_create_offers/: down.sql  up.sql
migrations/2025-11-11-201009_update_schema/: down.sql  up.sql
migrations/2025-11-12-024845_add_user_details/: up.sql
migrations/2025-11-13-042918_json_details_for_offers/: down.sql  up.sql
migrations/2025-11-25-161537_i_want_to_help/: down.sql  up.sql
migrations/2025-12-04-015218_create_memberships/: down.sql  up.sql
migrations/2025-12-04-015402_create_roles/: down.sql  up.sql
questions_summary/: .env  package-lock.json  package.json  script.mjs
src/: app_state.rs  db.rs  extract_host.rs  lib.rs  mailing_list.rs  mailmerge.rs  main.rs  registration.rs  schema.rs  send_email.rs  settings.rs  validator.rs
src/domains/: mod.rs  (+4 more)
utils/: audit_routes.mjs  checkResponses.sh  load-entities.mjs  load-flow_entries.mjs  loader-base.mjs
(+95 files in other folders)
