[package]
name = "heron"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[profile.release]
opt-level = 2
lto = false
codegen-units = 4


[build-dependencies]
chrono = { version = "0.4.41", features = ["serde"] }

[dependencies]
actix-cors = "0.7.1"
actix-files = "0.6.6"
actix-web = "4.0"
actix-web-httpauth = "0.8.2"
base64 = "0.22.1"
bcrypt = "0.17.0"
chrono = { version = "0.4.41", features = ["serde"] }
diesel = { version = "2.2.10", features = ["sqlite", "chrono", "r2d2"] }
dotenv = "0.15.0"
env_logger = "0.11.8"
handlebars = { version = "6.3.2", features = ["dir_source"] }
hmac = "0.12.1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
lettre = "0.11.16"
log = "0.4.27"
luma = "0.1.0"
qrcode = "0.14.1"
qrcode-generator = "5.0.0"
serde = { version = "1.0.219", features = ["derive", "serde_derive", "rc"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }  # if async
serde_derive = "1.0.219"
config = "0.15.13"
actix-session = {version = "0.11.0", features = ["cookie-session"] }
actix-identity = "0.9.0"
futures = "0.3.31"
dotenvy = "0.15.7"
actix-multipart = "0.7.2"
futures-util = "0.3.31"
sanitize-filename = "0.6.0"
actix-rt = "2.11.0"
diesel_migrations = { version = "2.3.1", features = ["sqlite"] }
tempfile = "3.23.0"
once_cell = "1.21.3"
rand = "0.10.0"
